# Anko

./: CHANGELOG.md  CLAUDE.md  biome.jsonc  commitlint.config.js  docker-compose.yml  index.html  package.json  vite.config.ts
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  commitlint.yml  fix-commit.yml  release.yml
docker/mariadb/: init.sql
docker/mysql/: init.sql
docker/mysql-lts/: init.sql
docker/postgres/: init.sql
docker/postgres15/: init.sql
src/: App.tsx  DebugApp.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/commands/: connection.rs  mod.rs  query.rs  schema.rs  storage.rs
src-tauri/src/db/: connector.rs  mod.rs  mysql.rs  postgres.rs  query_utils.rs
src-tauri/src/storage/: connections.rs  encryption.rs  mod.rs  query_history.rs  saved_queries.rs  workspaces.rs
src/components/connection/: ConnectionDialog.tsx  ConnectionList.tsx
src/components/editor/: QueryEditor.tsx  SQLEditor.tsx  sql-autocomplete.ts  sql-theme.ts
src/components/errors/: ErrorBoundary.tsx
src/entities/: connection.ts  database.ts  index.ts  query-history.ts  query.ts  saved-query.ts  schema.ts  table-edit.ts  workspace.ts
src/hooks/: useUpdateChecker.ts
src/lib/: debug.ts  error-utils.ts  export-utils.ts  sql-generator.ts  table-utils.ts  tauri.ts  toast-utils.ts  updater.ts  utils.ts  zod-generator.ts
src/reducers/: tree-reducer.ts
src/stores/: index.ts
src/types/: index.ts
(+85 files in other folders)
